added the titles and routing

--- a/LeerMeester/src/App.css
+++ b/LeerMeester/src/App.css
@@ -52,11 +52,23 @@
   }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+div.scrollmenu {
+  background-color: #333;
+  overflow: none;
+  white-space: nowrap;
+  padding-right: 900px;
+  padding-left: 300px;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #777;
 }
