added kanban and article layout

--- a/LeerMeester/src/App.css
+++ b/LeerMeester/src/App.css
@@ -41,10 +41,13 @@
   color: #888;
 } */
 
-.App-logo{
-  padding: 0px;
-  margin: 0px;
+#logo {
+  height: 100px; /* Adjust the height as needed */
+  width: auto; /* Maintain aspect ratio */
+  /* Add more styling properties as needed */
+
 }
+
 
 @media (prefers-reduced-motion: no-preference) {
   .logo {
@@ -55,10 +58,13 @@
 
 div.scrollmenu {
   background-color: #333;
-  overflow: none;
-  white-space: nowrap;
-  padding-right: 900px;
-  padding-left: 300px;
+  overflow: auto;
+  white-space: wrap;
+  margin:10px;
+  text-align: center;
+  padding:10px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
 }
 
 div.scrollmenu a {
@@ -71,4 +77,65 @@ div.scrollmenu a {
 
 div.scrollmenu a:hover {
   background-color: #777;
+}
+
+.logo{
+  margin:10px;
+  height: 70px;
+  width: 70px;
+}
+
+.scrollmenu{
+  padding:10px;
+}
+
+.offcanvas-button {
+  background-color: black;
+  border-color: black;
+}
+
+.navbar-toggler-icon {
+  background-color: black;
+}
+
+.offcanvas {
+  font-size: 50px;
+  margin: 10px;
+  padding-top: 5px;
+}
+
+.offcanvas h2 {
+  font-size: 20px;
+  margin: 10px;
+  color: white;
+}
+
+.offcanvas input {
+  font-size: 20px;
+}
+
+/* Add this CSS in your global CSS file or within your component */
+.scrollmenu {
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.scrollmenu a {
+  display: inline-block;
+  padding: 14px;
+  text-decoration: none;
+  color: white;
+}
+
+/* Media query for responsiveness */
+@media screen and (max-width: 768px) {
+  .scrollmenu {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .scrollmenu a {
+    flex: 0 0 auto;
+    margin: 2.5px;
+  }
 }
